# Skills_CNKI

./: README.md  cnki_skill_definition.md
cnki_mcp_core/: .gitignore  README.md  comprehensive_test.py  main.py  pyproject.toml  smoke_test.py  test_login_gui.py  test_portal_full.py  verify_cnki.py
cnki_mcp_core/cnki_mcp_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cnki_mcp_core/core/: __init__.py  browser.py  browser_pw.py  constants.py  ocr_helper.py  utils.py
cnki_mcp_core/services/: __init__.py  detail_service.py  download_service.py  portal_service.py  search_service.py
documentation/: cnki_mcp_guide.md  cnkiapi.md  cnkiopenx.md  refprj.md
mcp_configs/: cnki_unified_config.json
scripts/: bypass_tun.py
scripts/cnki_api_wrapper/: auth.py  pyproject.toml  search.py
