[project]
name = "cnki-mcp-core"
version = "0.1.0"
description = "中国知网智能能力库核心框架"
readme = "README.md"
authors = [{ name = "corlin", email = "corlin@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    "asyncer>=0.0.8",
    "setuptools>=70.0.0",
]

[tool.setuptools.packages.find]
include = ["core*", "services*"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
